Small modifications to game class

--- a/top_ten.yml
+++ b/top_ten.yml
@@ -70,3 +70,15 @@ name and answer:
 - GGRY
 time: 4
 number of guesses: 1
+---
+name and answer:
+- Judson
+- RRBB
+time: 3
+number of guesses: 1
+---
+name and answer:
+- Judson
+- RYGR
+time: 8
+number of guesses: 1
