Small changes to variable names

--- a/top_ten.yml
+++ b/top_ten.yml
@@ -82,3 +82,9 @@ name and answer:
 - RYGR
 time: 8
 number of guesses: 1
+---
+name and answer:
+- Judson
+- RPYYGPYG
+time: 16
+number of guesses: 1
