Final tweaks, tests still not working

--- a/top_ten.yml
+++ b/top_ten.yml
@@ -1,90 +1,6 @@
 ---
 name and answer:
 - Judson
-- YGRR
-time: 4
-number of guesses: 1
----
-name and answer:
-- Nick
-- YGBPPY
-time: 17
-number of guesses: 2
----
-name and answer:
-- KK
-- YBBR
-time: 4
-number of guesses: 1
----
-name and answer:
-- KK
-- RBRY
-time: 5
-number of guesses: 3
----
-name and answer:
-- JJ
-- GBGB
-time: 9
-number of guesses: 1
----
-name and answer:
-- PP
-- GRGB
-time: 4
-number of guesses: 1
----
-name and answer:
-- LL
-- BGRG
-time: 3
-number of guesses: 1
----
-name and answer:
-- Judson
-- RBYR
-time: 5
-number of guesses: 1
----
-name and answer:
-- NN
-- GGRG
-time: 4
-number of guesses: 2
----
-name and answer:
-- Judson
-- RGYR
-time: 4
-number of guesses: 1
----
-name and answer:
-- KK
-- BYRG
-time: 4
-number of guesses: 1
----
-name and answer:
-- Judson
-- GGRY
-time: 4
-number of guesses: 1
----
-name and answer:
-- Judson
-- RRBB
-time: 3
-number of guesses: 1
----
-name and answer:
-- Judson
-- RYGR
-time: 8
-number of guesses: 1
----
-name and answer:
-- Judson
-- RPYYGPYG
-time: 16
+- PPPGRRRB
+time: 7
 number of guesses: 1
